--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,6 +3,8 @@
 
   position: relative;
   padding-right: calc(18px + 24px);
+
+  max-width: calc(100% - 120px - 150px - 28px * 2 - 42px);
 }
 
 @media screen and (max-width: 767px) {
@@ -11,5 +13,7 @@
     padding: 0 calc(10px + 18px);
 
     margin-top: 26px;
+
+    max-width: calc(100% - 19px * 2 - 9px * 2);
   }
 }
